<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373B6E">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back_3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_3" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="400dp"
            android:layout_height="400dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintEnd_toEndOf="@+id/imageView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/logo1"
            android:contentDescription="@string/joyeria_logo2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_purple_1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4">

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/email"
                android:drawablePadding="18dp"
                android:ems="10"
                android:fontFamily="@font/poppin_medium_italic"
                android:hint="@string/email_icono"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:ignore="TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/poppin_medium_italic"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:ignore="VisualLintTextFieldSize" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="32dp"
                    android:contentDescription="@string/google_icono"
                    app:srcCompat="@drawable/google"
                    tools:ignore="ImageContrastCheck" />

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/facebook_icono"
                    app:srcCompat="@drawable/facebook"
                    tools:ignore="ImageContrastCheck" />

            </LinearLayout>

            <Button
                android:id="@+id/buttonIniciarSesion"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/background_button"
                android:fontFamily="@font/poppin_medium_italic"
                android:minHeight="48dp"
                android:text="@string/iniciar_sesion"
                android:textColor="#ffffff"
                android:textSize="18sp"
                tools:ignore="VisualLintButtonSize,TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppin_medium_italic"
                android:text="@string/enlace_nueva_cuenta"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="12sp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
