<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#373B6E"
    tools:ignore="SpeakableTextPresentCheck">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_3"
            android:contentDescription="@string/back_3_fondo"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="400dp"
            android:layout_height="400dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo3"
            android:contentDescription="TODO"
            tools:ignore="ContentDescription,HardcodedText" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_purple_1"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView9">

            <EditText
                android:id="@+id/textNombres"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/name"
                android:drawablePadding="18dp"
                android:ems="10"
                android:fontFamily="@font/poppin_medium_italic"
                android:hint="@string/nombres"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:ignore="TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/textApellidos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/name"
                android:drawablePadding="18dp"
                android:ems="10"
                android:fontFamily="@font/poppin_medium_italic"
                android:hint="@string/apellidos"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:ignore="TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/textDNI"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/dni"
                android:drawablePadding="18dp"
                android:ems="10"
                android:fontFamily="@font/poppin_medium_italic"
                android:hint="@string/dni"
                android:inputType="number"
                android:padding="12dp"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:ignore="TextFields,VisualLintTextFieldSize" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="ExtraText">

                <RadioButton
                    android:id="@+id/radioButtonMasculino"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:button="@drawable/custome_radiobutton"
                    android:fontFamily="@font/poppin_medium_italic"
                    android:gravity="center"
                    android:text="@string/masculino"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:theme="@style/RadioButtonStyle"
                    tools:ignore="TouchTargetSizeCheck" />

                <RadioButton
                    android:id="@+id/radioButtonFemenino"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:button="@drawable/custome_radiobutton"
                    android:fontFamily="@font/poppin_medium_italic"
                    android:gravity="center"
                    android:text="@string/femenino"
                    android:textColor="#ffffff"
                    android:textSize="14sp"
                    android:theme="@style/RadioButtonStyle"
                    tools:ignore="TouchTargetSizeCheck" />
            </RadioGroup>


            <EditText
                android:id="@+id/textCelular"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="18dp"
                android:ems="10"
                android:fontFamily="@font/poppin_medium_italic"
                android:hint="@string/celular"
                android:inputType="number"
                android:padding="12dp"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:ignore="TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/textEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/email"
                android:drawablePadding="18dp"
                android:ems="10"
                android:fontFamily="@font/poppin_medium_italic"
                android:hint="@string/email_icono"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:ignore="TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/textDireccion"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/direccion"
                android:drawablePadding="18dp"
                android:ems="10"
                android:fontFamily="@font/poppin_medium_italic"
                android:hint="@string/direccion"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:ignore="TextFields,VisualLintTextFieldSize" />

            <EditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:autofillHints=""
                android:background="@drawable/background_edittext"
                android:drawableStart="@drawable/password"
                android:drawablePadding="16dp"
                android:ems="10"
                android:fontFamily="@font/poppin_medium_italic"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="12dp"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:ignore="VisualLintTextFieldSize" />

            <Button
                android:id="@+id/buttonRegistrar"
                style="@android:style/Widget.Button"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/background_button"
                android:fontFamily="@font/poppin_medium_italic"
                android:text="@string/registrarse"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:layout_marginBottom="32dp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
